feat: openai streaming